cmake_minimum_required(VERSION 3.20)
project(test)

set(CMAKE_CXX_STANDARD 17)

add_executable(test1 1/main.cpp)
add_executable(test2 2/main.cpp)
add_executable(test3 3/main.cpp)
add_executable(test4 4/main.cpp)
add_executable(test5 5/main.cpp)
add_executable(test6 6/main.cpp)
add_executable(test7 7/main.cpp)